# MotorCycleCoach

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  demo_workflow.md  main.py  pyproject.toml  render.yaml  requirements.txt  sampletestquestions.txt
backend/: ingestion.py  motorcycle_coach_prompt copy.txt  motorcycle_coach_prompt.txt  save_cloud_embedding.py  save_to_qdrant.py
backend/src/coachagent/: agent.py  classifier.py  main.py  rag.py  rag_check.py  server.py  telemetry_advisor.py
data/: reckless_rider_dataset.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  VideoMetadata.js  index.css
