[project]
name = "motorcyclecoach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "fastmcp>=3.2.4",
    "google-adk>=1.31.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "yt-dlp>=2026.3.17",
]
